[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree_lab"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["matplotlib>=3.5.1",
                "numpy>=1.15.1",
                "pandas>=1.3.5",
                "pyarrow>=8.0.0",
                "Requests==2.19.1",
                "seaborn==0.12.2",
                "setuptools>=40.2.0",
                "scikit-learn>=0.0.post10",
                "polars >=0.19.19",
                "ipython~=8.17.2",
                "pytest-cov >= 2.10.0",
                "pathlib>=1.0"]

[project.optional-dependencies]
dev = ["pytest ~= 7.1.2"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.poetry]
name = "Tree_Survival_Project"
version = "0.1.0"
description = "The goal of this project is to provide user-friendly functions for basic dataset analysis. It includes functionalities for performing basic preprocessing, cleaning, and visualizing results."
authors = ["Fedi Ghanmi", "Sarvin Gunasekar", "Elisa Negrini"]
license = "GPL-3.0"
homepage = "https://github.com/fedighanmi/Tree_Survival_Project"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.extras]
testing = ["tox >= 3.24", "pytest >= 6.0", "pytest-cov >= 2.10.0"]

docs = ["sphinx >= 5.0", "sphinx-book-theme >= 0.2.0", "numpydoc >= 1.2.1", "myst_nb >= 0.13.1", "sphinx_design >= 0.4.1"]

