[metadata]
name = Tree_Survival_Project
description = The goal of this project is to provide a user-friendly functions
              for basic dataset analysis. It includes functionalities for
              performing basic preprocessing, cleaning and visualizing results.
url = https://github.com/fedighanmi/Tree_Survival_Project
author = Fedi Ghanmi, Sarvin Gunasekar, Elisa Negrini
license = GPL-3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11.7
    Programming Language :: Python :: 3.12.0

[options.extras_require]
testing =
    tox >= 3.24
    pytest >= 6.0
    pytest-cov >= 2.10.0

docs =
    sphinx >= 5.1.0
    sphinx-book-theme>=0.2.0
    numpydoc >= 1.2.1
    myst_nb >= 0.13.1
    sphinx_design >= 0.4.1